# tailscale-browser

./: .gitignore  .pre-commit-config.yaml  BUILD_GUIDE.md  Makefile  README.md  icon.icns  pyproject.toml  tailscale_browser.py
